# adk_stock_market_analyst

./: .gitignore  README.md  RESEARCH_AGENT_GUIDE.md  poetry_example.py  pyproject.toml  requirements.txt
stock_research_adk/: .env  __init__.py  agent.py
stock_research_adk/researcher_agent/: __init__.py  agent.py
