[tool.poetry]
name = "adk-stock-market-analyst"
version = "0.1.0"
description = "Enhanced financial research agent using Google ADK with CNBC-focused, time-filtered search capabilities"
authors = ["Shrikant Patel <shrikantpatel@example.com>"]
readme = "README.md"
packages = [{include = "stock_research_adk"}]

[tool.poetry.dependencies]
python = "^3.11"
google-adk = "^1.14.1"
python-dotenv = "^1.1.1"
fastapi = "^0.117.1"
uvicorn = "^0.36.0"
pydantic = "^2.11.9"
pydantic-settings = "^2.10.1"
google-cloud-aiplatform = "^1.115.0"
google-genai = "^1.38.0"
google-auth = "^2.40.3"
google-api-python-client = "^2.182.0"
requests = "^2.32.5"
python-dateutil = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
# Add any CLI scripts here if needed
adk-researcher = "stock_research_adk.researcher_agent:main"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"